<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:elevation="10dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="10dp"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/card"
            android:elevation="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/foodName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imagesList"
                android:layout_width="60dp"
                android:layout_height="68dp"
                android:contentDescription="@string/briyani"
                app:srcCompat="@drawable/pasta_png"
                tools:layout_editor_absoluteX="18dp"
                tools:layout_editor_absoluteY="16dp" />

        </LinearLayout>


        <TextView
            android:id="@+id/foodName"
            android:layout_width="109dp"
            android:layout_height="30dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/fried_rice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.445"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/AddItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/_1"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/minusButton"
            app:layout_constraintTop_toBottomOf="@+id/foodName" />

        <ImageView
            android:id="@+id/trashButton"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/trash"
            app:layout_constraintBottom_toTopOf="@+id/plusButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.615"
            app:layout_constraintStart_toEndOf="@+id/foodName"
            app:layout_constraintTop_toTopOf="@+id/foodName"
            app:layout_constraintVertical_bias="0.357"
            app:srcCompat="@drawable/trush" />

        <TextView
            android:id="@+id/rupess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="₹"
            android:textColor="@color/black"
            android:textSize="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/amount"
            app:layout_constraintEnd_toStartOf="@+id/amount"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.891" />


        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/roboto_bold"
            android:text="250"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.735"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/plusButton"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/plusButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/AddItem"
            app:layout_constraintTop_toBottomOf="@+id/foodName"
            app:layout_constraintVertical_bias="0.444"
            app:srcCompat="@drawable/plus" />

        <ImageView
            android:id="@+id/minusButton"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="36dp"
            android:contentDescription="@string/minusButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout8"
            app:layout_constraintTop_toTopOf="@+id/plusButton"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/remove" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>