<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="97dp"
        android:background="@drawable/card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <ImageView
            android:id="@+id/menuFoodImageList"
            android:layout_width="92dp"
            android:layout_height="77dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/foodList"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/menuAddToCart"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/briyani" />

        <TextView
            android:id="@+id/menuPriceList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/_5"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/menuAddToCart"
            app:layout_constraintEnd_toEndOf="@+id/menuAddToCart"
            app:layout_constraintStart_toStartOf="@+id/menuAddToCart"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/menuFoodNameList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/briyani"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.445"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.506" />

        <TextView
            android:id="@+id/menuAddToCart"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/gradient"
            android:gravity="center"
            android:text="@string/add_to_cart"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.943"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menuPriceList" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>