<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="350dp"
        android:layout_height="97dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <ImageView
            android:id="@+id/recentFoodImageList"
            android:layout_width="100dp"
            android:layout_height="83dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/foodList"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.012"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/briyani" />

        <TextView
            android:id="@+id/recentMenuPriceList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/_5"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/recentMenuNameList"
            app:layout_constraintStart_toStartOf="@+id/recentMenuNameList"
            app:layout_constraintTop_toBottomOf="@+id/recentMenuNameList" />

        <TextView
            android:id="@+id/recentMenuNameList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/briyani"
            app:layout_constraintBottom_toTopOf="@+id/recentMenuPriceList"
            app:layout_constraintEnd_toStartOf="@+id/recentAddToCartList"
            app:layout_constraintStart_toEndOf="@+id/recentFoodImageList"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/recentAddToCartList"
            android:layout_width="119dp"
            android:layout_height="31dp"
            android:background="@drawable/gradient"
            android:gravity="center"
            android:text="@string/buy_again"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.969"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.53" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>