<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kronos.fragment.HistoryFragment">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/recent_buy"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView4"
        app:layout_constraintEnd_toEndOf="@+id/cardView4"
        app:layout_constraintStart_toStartOf="@+id/cardView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recentMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/recent_buy"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="@+id/cardView4"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="@+id/cardView4"
        app:layout_constraintTop_toBottomOf="@+id/cardView4"
        app:layout_constraintVertical_bias="0.489" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="357dp"
        android:layout_height="104dp"
        app:cardCornerRadius="15dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="350dp"
            android:layout_height="97dp"
            android:background="@drawable/card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="61dp">


            <ImageView
                android:id="@+id/menuFoodImageList"
                android:layout_width="0dp"
                android:layout_height="77dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="28dp"
                android:contentDescription="@string/foodList"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/menuPriceList"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/briyani" />


            <TextView
                android:id="@+id/menuPriceList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/_5"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/menuFoodNameList"
                app:layout_constraintStart_toStartOf="@+id/menuFoodNameList" />

            <TextView
                android:id="@+id/menuFoodNameList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="11dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/briyani"
                app:layout_constraintBottom_toTopOf="@+id/menuPriceList"
                app:layout_constraintEnd_toStartOf="@+id/cardView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="32dp"
                android:elevation="10dp"
                app:cardBackgroundColor="@color/green"
                app:cardCornerRadius="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="408dp"
        android:layout_height="430dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4"
        tools:listitem="@layout/recent_history_items" />

</androidx.constraintlayout.widget.ConstraintLayout>